fix some FindBugs warnings